build issue fix